--- a/guestbook/templates/login.html
+++ b/guestbook/templates/login.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Login Page</h1>
+    <ul>
+        <li><a href="login">login</a></li>
+        <li><a href="register">register</a></li>
+    </ul>
     <form action="login" method="POST">
         <input type="text" name="usermail" placeholder="usermail">
         <input type="text" name="password" placeholder="password">
