--- a/guestbook/templates/index.html
+++ b/guestbook/templates/index.html
@@ -3,29 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script> -->
+    <link rel="stylesheet" href="/static/semantic.min.css">
+    <link rel="stylesheet" href="/static/index.css">
+    <script src="/static/jquery.min.js"></script>
+    <script src="/static/semantic.min.js"></script>
+    <script src="/static/index.js"></script>
 </head>
 <body>
-    <h1>Index Page</h1>
     {% if user %}
-        <p>hello!! {{user}}</p>
-        <ul>
-            <li><a href="logout">logout</a></li>
-        </ul>
-        <form action="newboard" method="POST">
-            <input type="text" name="pageUrl" placeholder="yout page url">
-            <input type="submit">
-        </form>
-        <ul>
-            {% for url in urls %}
-                <li>{{url}}</li>
-            {% endfor %}
-        </ul>
+        <div>
+            <p>hello!! {{user}}</p>
+            <ul>
+                <li><a href="logout">logout</a></li>
+            </ul>
+            <form action="comments/1" method="POST">
+                <input type="text" name="mesg" placeholder="message to board 1">
+                <input type="submit">
+            </form>
+            
+
+            <form class="ui form" action="newboard" method="POST">
+                <div class="field">
+                    <label for="your page url"></label>
+                    <input type="text" name="pageUrl" placeholder="your page url">
+                </div>
+            </form>
+            <div class="ui divided items">
+                {% for url in urls %}
+                    <div class="item">
+                        <div class="middle aligned content">
+                            <a class="header" href="">{{url}}</a>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>   
     {% else %}
-        <p>unlogin</p>
-        <ul>
-            <li><a href="login">login</a></li>
-            <li><a href="register">register</a></li>
-        </ul>
+        <div>
+            <div class="ui basic segment">
+                <div class="ui two column middle aligned very relaxed stackable grid">
+                    <div class="column">
+                        <form class="ui form">
+                            <div class="field">
+                                <label for="">Your Mail</label>
+                                <input type="text" id="usermailVal" placeholder="usermail">
+                            </div>
+                            <div class="field">
+                                <label for="">Password</label>
+                                <input type="text" id="passwordVal" placeholder="password">
+                            </div>
+                            <button class="ui button" id="loginBtn">Login</button>
+                        </form>
+                    </div>
+                    <div class="ui vertical divider">Or</div>
+                    <div class="column">
+                        <form class="ui form">
+                            <div class="field">
+                                <label for="">Your Mail</label>
+                                <input type="text" id="registUsermailVal" placeholder="usermail">
+                            </div>
+                            <div class="field">
+                                <label for="">Password</label>
+                                <input type="text" id="passwordVal1" placeholder="password">
+                            </div>
+                            <div class="field">
+                                <label for="">Password</label>
+                                <input type="text" id="passwordVal2" placeholder="confirm password">
+                            </div>
+                            <button class="ui button" id="registBtn">regist</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
 </body>
 </html> 
