add email, password valid check

--- a/guestbook/templates/index.html
+++ b/guestbook/templates/index.html
@@ -40,34 +40,34 @@
             <div class="ui basic segment">
                 <div class="ui two column middle aligned very relaxed stackable grid">
                     <div class="column">
-                        <form class="ui form">
+                        <form class="ui form" id="loginForm">
                             <div class="field">
                                 <label for="">Your Mail</label>
-                                <input type="text" id="usermailVal" placeholder="usermail">
+                                <input type="email" id="usermailVal" placeholder="usermail">
                             </div>
                             <div class="field">
                                 <label for="">Password</label>
-                                <input type="text" id="passwordVal" placeholder="password">
+                                <input type="password" id="passwordVal" placeholder="password">
                             </div>
-                            <button class="ui button" id="loginBtn">Login</button>
+                            <button class="ui button">Login</button>
                         </form>
                     </div>
                     <div class="ui vertical divider">Or</div>
                     <div class="column">
-                        <form class="ui form">
+                        <form class="ui form"  id="registForm">
                             <div class="field">
                                 <label for="">Your Mail</label>
-                                <input type="text" id="registUsermailVal" placeholder="usermail">
+                                <input type="email" id="registUsermailVal" placeholder="usermail">
                             </div>
                             <div class="field">
                                 <label for="">Password</label>
-                                <input type="text" id="passwordVal1" placeholder="password">
+                                <input type="password" id="passwordVal1" placeholder="password">
                             </div>
                             <div class="field">
                                 <label for="">Password</label>
-                                <input type="text" id="passwordVal2" placeholder="confirm password">
+                                <input type="password" id="passwordVal2" placeholder="confirm password">
                             </div>
-                            <button class="ui button" id="registBtn">regist</button>
+                            <button class="ui button">regist</button>
                         </form>
                     </div>
                 </div>
