--- a/guestbook/templates/base.html
+++ b/guestbook/templates/base.html
@@ -7,9 +7,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script> -->
     <link rel="stylesheet" href="/static/semantic.min.css">
-    <link rel="stylesheet" href="/static/index.css">
     <script src="/static/jquery.min.js"></script>
     <script src="/static/semantic.min.js"></script>
+    <link rel="stylesheet" href="/static/base.css">
+    <script src="static/base.js"></script>
     {% block head %}
     {% endblock %}
 </head>
