--- a/guestbook/templates/index.html
+++ b/guestbook/templates/index.html
@@ -44,8 +44,12 @@
                     <div class="column">
                         <form class="ui form"  id="registForm">
                             <div class="field">
-                                <label for="">Your Mail</label>
+                                <label for="">usermail</label>
                                 <input type="email" id="registUsermailVal" placeholder="usermail">
+                            </div>
+                            <div class="field">
+                                <label for="">nickname</label>
+                                <input type="text" id="registNicknameVal" placeholder="nickname">
                             </div>
                             <div class="field">
                                 <label for="">Password</label>
