--- a/guestbook/templates/index.html
+++ b/guestbook/templates/index.html
@@ -45,7 +45,7 @@
                         <form class="ui form"  id="registForm">
                             <div class="field">
                                 <label for="">usermail</label>
-                                <input type="email" id="registUsermailVal" placeholder="usermail">
+                                <input type="email" id="registUsermailVal" placeholder="example@mail.com">
                             </div>
                             <div class="field">
                                 <label for="">nickname</label>
@@ -56,8 +56,8 @@
                                 <input type="password" id="passwordVal1" placeholder="password">
                             </div>
                             <div class="field">
-                                <label for="">Password</label>
-                                <input type="password" id="passwordVal2" placeholder="confirm password">
+                                <label for="">Retype Password</label>
+                                <input type="password" id="passwordVal2" placeholder="retype password">
                             </div>
                             <button class="ui button">regist</button>
                         </form>
